[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "slurm-graph"
authors = [{ name = "Samuel Larkin", email = "Samuel.Larkin@cnrc-nrc.gc.ca" }]
description = "Display job dependency tree"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["SLURM", "CLI", "Graph"]
classifiers = [
  "Framework :: IPython",
  "Framework :: Jupyter",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: User Interfaces",
  "Topic :: System :: Installation/Setup",
  "Topic :: System :: Shells",
  "Topic :: Terminals",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = ["click", "networkx", "termcolor"]
version = "0.1.0"

[project.optional-dependencies]
dev = ["black", "isort", "mypy", "networkx-stubs"]
debug = ["pudb"]
install = ["pyinstaller"]

[project.scripts]
slurm-graph = "slurm_graph.__main__:cli"

[project.urls]
repository = "https://github.com:SamuelLarkin/Slurm-Graph"

[tool.mypy]
files = "slurm_graph"
